dist/1.0/bin/sample/retrieveUnpackaged/objects/QPricing__c.object
<CustomObject>
    <description>Pricing for wholesale request quotations</description>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments to pricing line</description>
        <inlineHelpText>Add comments to pricing line</inlineHelpText>
        <label>Comments</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Contract Length in months</description>
        <inlineHelpText>Contract Length in months. 
for Ask for = 1 year, Contract Length = 12
for Ask for = 2 years, Contract Length = 24
etc.</inlineHelpText>
        <label>Contract Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Period</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <description>Monthly Recurring Costs</description>
        <inlineHelpText>Monthly Recurring Costs</inlineHelpText>
        <label>MRC</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRC__c</fullName>
        <description>Non Recurring Costs</description>
        <inlineHelpText>Non Recurring Costs</inlineHelpText>
        <label>NRC</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Circuits__c</fullName>
        <label>No of Circuits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Quotation__c</fullName>
        <label>Request Quotation</label>
        <referenceTo>Request_Quotation__c</referenceTo>
        <relationshipLabel>Quotation Pricings</relationshipLabel>
        <relationshipName>PricingsQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_by_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pricing selected by Customer, should be checked only after Customer selects Firm Pricing</description>
        <inlineHelpText>Pricing selected by Customer, should be checked only after Customer selects Firm Pricing</inlineHelpText>
        <label>Selected by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>if(No_of_Circuits__c !=0,No_of_Circuits__c * ( Contract_Length__c * MRC__c + NRC__c ),( Contract_Length__c * MRC__c + NRC__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No_of_Circuits  *  ( Contract_Length  * MRC +  NRC )
Attention! - If &quot;Ask for&quot; = &quot;0 Years&quot; 12 months will be used to calculate Total Amount</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Pricing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>